FIXED ABOUT ME PATH

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             />
           </div>
           <div><a href="index.html">Home</a></div>
-          <div><a href="/about/about.html">About</a></div>
-          <div><a href="/contact/contact.html">Contact</a></div>
+          <div><a href="./about/about.html">About</a></div>
+          <div><a href="./contact/contact.html">Contact</a></div>
         </div>
       </div>
       <div class="title">
